Fix collapsed read covers
It must be hidden, but there was a CSS class priority issues.

--- a/assets/forplay.less
+++ b/assets/forplay.less
@@ -388,6 +388,7 @@ header h2 {
 	.clip;
 }
 
+header.read.collapsed .cover-set,
 header.read .cover-set {
 	display: none;
 }
